--- a/chips.html
+++ b/chips.html
@@ -13,7 +13,7 @@
         <nav class="navigation">
             <a class="logo"><span>LMC</span>doces</a>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="index.html">Menu</a></li>
+                <li class="nav-item"><a href="Index.html">Menu</a></li>
                 <li class="nav-item"><a href="Chocolates.html">Chocolates em geral e doces de bar</a></li>
                 <li class="nav-item"><a href="Chicletes.html">Cicletes e Balas</a></li>
                 <li class="nav-item"><a href="ProdutosDiversos.html">Produtos Diversos</a></li>
